Update sentence about images

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 Another task I worked on was creating visualisations of knowledge graphs for different companies Schema App was working with, by using SPARQL to query RDF data. Similar to my tickets with Vue.js, I did not learn much about SPARQL in class prior to the job and also had to learn this on the job. These knowledge graphs were used in Schema App’s Quarterly Business Reviews presentation. 
             </p>
             <p>
-                These are examples of some of the visualisations of knowledge graphs I created for Slack, one of Schema App's clients:
+                These are examples of some of the visualisations of knowledge graphs I created for one of Schema App's clients:
             </p>
             <img src="Slack.png" alt="A photo of one of the Slack knowledge graphs" style="width:450px;" />
             <img src="SlackOverview.png" alt="A photo of another one of the Slack knowledge graphs" style="width:500px;" />
